<resources>
    <string name="app_name">Lazer ninja</string>
    <string name="login">login:</string>
    <string name="email">email:</string>
    <string name="first_name">first name:</string>
    <string name="last_name">last name:</string>
    <string name="pass">password:</string>
    <string name="confirm_pass">confirm password:</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="recover">Recover Pass</string>
    <string name="username">username:</string>
    <string name="logout">logout</string>
    <string name="UUID">9eacf87e-6114-4f24-b4bd-d76e454061be</string>
</resources>
