<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/signup_login_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/signup_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/signup_first_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/signup_last_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            />

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/signup_pass_et"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            />

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_pass"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/signup_confirm_pass_et"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"/>
    </LinearLayout>
</RelativeLayout>
